blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Sales_Territory__c/Sales_Territory__c.object-meta.xml
<CustomObject>
    <description>A sales area, such as a region or a channel, with one responsible rep and a target. Retailer accounts belong to one territory so ownership and reporting are clear.</description>
    <label>Territory</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>