blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Sales_Territory__c/fields/Annual_target__c.field-meta.xml
<CustomField>
    <fullName>Annual_target__c</fullName>
    <description>Wholesale revenue target for the territory for the year.</description>
    <label>Annual target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>