blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Sales_Territory__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sales rep responsible for retailers in this territory.</description>
    <label>Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Territories Rep</relationshipLabel>
    <relationshipName>Sales_Territory_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>