blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Sales_Territory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Whether the territory has a rep and is being worked.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>