blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Sales_Territory__c/fields/Territory_type__c.field-meta.xml
<CustomField>
    <fullName>Territory_type__c</fullName>
    <description>Whether the territory is cut by place or by channel.</description>
    <label>Territory type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Geographic</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>National accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>