blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Sales_Territory__c/listViews/Territory_overview.listView-meta.xml
<ListView>
    <fullName>Territory_overview</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Covered,Vacant</value>
    </filters>
    <label>Territory overview</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>